--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.dev.js --open",
     "build": "webpack --config webpack.config.js",
-		"tscheck": "tsc"
+    "tscheck": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,8 @@
   "dependencies": {
     "@babel/preset-env": "^7.19.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
@@ -35,6 +36,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "babel-loader": "^8.2.5",
     "core-js": "^3.25.2",
     "html-loader": "^4.1.0",
